2010-08-03  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15304: csv export is limiting exported fields to 100 chars (thanks to Björn Pedersen)

2010-08-03  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15265: InstallTool-login not possible after Update to 4.4.1 due to session_start() in extensions (thanks to Ernesto Baschny and Helmut Hummel)

2010-08-02  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15289: Element-Browser page tree has HSC'ed <span> elements

2010-08-01  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15321: Unused variable $warningItems in tx_install (thanks to Markus Klein)

2010-08-01  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15292: Fatal error in DB browser because of wrong sprite API usage (thanks to Alexandre Gravel-Raymond)

2010-07-30  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to bug #15188: Remove default greyed out effect for CEs (Thanks to Steffen Gebert)
	* Fixed bug #15295: Page treeFilter not re-applied after branch toggling (Thanks to Felix Kopp)
	
2010-07-29  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #13427: t3lib_div::cleanOutputBuffers() might loop forever (thanks to Stephan Seitz and Steffen Gebert)

2010-07-28  Oliver Hader  <oliver@typo3.org>

	* Raised Extbase and Fluid from 1.2.0 to 1.2.1
	* Fixed bug #14953: XSS in (new) taskcenter (thanks to Georg Ringer)
	* Fixed bug #14978: XSS in file tree (thanks to Georg Ringer)
	* Fixed bug #13292: TYPO3 error message reveals path to web root (thanks to Xavier Perseguers)
	* Fixed bug #11618: XSS vulnerability in install tool / BE login (thanks to Georg Ringer)
	* Fixed bug #14950: XSS in t3editor (thanks to Tobias Liebig)
	* Fixed bug #14850: Information disclosure in t3lib_htmlmail (thanks to Georg Ringer)
	* Fixed bug #13961: XSS in impexp (thanks to Georg Ringer)
	* Fixed bug #13958: XSS in BE Log (thanks to Georg Ringer)
	* Fixed bug #14317: XSS in Extension Manager (thanks to Georg Ringer)