@@ -1,6 +1,7 @@
 2010-08-03  Susanne Moog  <typo3@susanne-moog.de>
 
 	* Fixed bug #15304: csv export is limiting exported fields to 100 chars (thanks to Björn Pedersen)
+	* Fixed bug #15313: Link to deprecation logfile doesn't work in installations inside a subdirectory (thanks to Stefan Galinski)
 
 2010-08-03  Oliver Hader  <oliver@typo3.org>
 
